--- a/README.html
+++ b/README.html
@@ -380,7 +380,7 @@ $(document).ready(function () {
 
 <div id="what-are-climate-stripes" class="section level3">
 <h3>What are Climate Stripes?</h3>
-<p>Climate stripes are visualisations of climate change from a temperature time series (Reference). They are meant mostly as a communication tool to a lay public and can be grasped almost instantly. They were developed to have minimal annotation almost like a colour bar code. Legend and time axis options have been included here if one wants to convey a bit more information.</p>
+<p>Climate stripes are visualisations of climate change from a temperature time series (Cliamte Lab 2018). They are meant mostly as a communication tool to a lay public and can be grasped almost instantly. They were developed to have minimal annotation almost like a colour bar code. Legend and time axis options have been included here if one wants to convey a bit more information.</p>
 </div>
 <div id="installation" class="section level2">
 <h2>Installation</h2>
@@ -430,7 +430,7 @@ for (i in monthcols){
 </div>
 <div id="references" class="section level1">
 <h1>References</h1>
-<p><a href="https://www.climate-lab-book.ac.uk/2018/warming-stripes/" class="uri">https://www.climate-lab-book.ac.uk/2018/warming-stripes/</a></p>
+<p>Climate Lab. 2018. <a href="https://www.climate-lab-book.ac.uk/2018/warming-stripes/" class="uri">https://www.climate-lab-book.ac.uk/2018/warming-stripes/</a></p>
 <p>GISTEMP Team, 2019: GISS Surface Temperature Analysis (GISTEMP), version 4. NASA Goddard Institute for Space Studies. Dataset accessed 2019-06-20 at <a href="https://data.giss.nasa.gov/gistemp/" class="uri">https://data.giss.nasa.gov/gistemp/</a>.</p>
 <p>Lenssen, N., G. Schmidt, J. Hansen, M. Menne,A. Persin,R. Ruedy, and D. Zyss, 2019: Improvements in the GISTEMP uncertainty model. J. Geophys. Res. Atmos. <a href="doi:10.1029/2018JD029522" class="uri">doi:10.1029/2018JD029522</a>.</p>
 </div>
